# twitch-bot-plus

./: .gitignore  LICENSE  README.md  Testing.py  pyproject.toml
Auth/: app.py
Auth/static/: styles.css
Auth/templates/: callback.html  home.html
src/TwitchBotPlus/: __init__.py  core.py
src/TwitchBotPlus/modules/: __init__.py  auth.py  command_handler.py  data_clases.py  networking.py  twitch.py
